logo.css
.inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;

}

.header {
  background-image: url('./Assets/Hero-bg.png');
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 150px;

}

.primary-color {
  color: rgb(78, 71, 255);
}

.font-primary {
  color: rgb(78, 71, 255);
  font-size: 34px;
  font-weight: 900;
}


.btn-primary {
  border-radius: 10px;
  background: rgb(78, 71, 255);
  color: white;
  padding: 1px 36px;
  border: none;
  font-weight: 600;
  width: 132px;
  height: 48px;
  transition-duration: 0.4s;
  cursor: pointer;
}

.btn-primary:hover {
  background-color: rgb(200, 200, 14);
  color: black;
}

.banner {
  text-align: center;
  padding-bottom: 150px;
}

h1 {
  color: rgb(37, 36, 50);
  font-size: 65px;
  font-weight: 700;
  /* text-align: center; */
}

.btn-sec {
  border-radius: 10px;
  background: rgb(78, 71, 255);
  color: white;
  padding: 1px 36px;
  border: none;
  font-weight: 600;
  width: auto;
  height: 48px;
  text-align: center;
  transition-duration: 0.4s;
  cursor: pointer;
}

.btn-sec:hover {
  background-color: rgb(196, 168, 10);
  color: black;
}

.dark-1 {
  color: rgba(37, 36, 50, 0.5);
}

h2 {
  font-size: 42px;
  font-weight: 700;
}

.main {

  max-width: 1140px;
  margin: 0 auto;
}

#body {
  background: rgba(75, 70, 237, 0.05);
}

.action-sec p {
  font-size: 24px;
  font-weight: 400;
}

.main-1 {
  display: flex;
  justify-content: space-between;
  margin: 50px 0px;
}

.main-1 img {
  border-radius: 45px;
}

.main-2 {
  text-align: center;
  margin-top: 150px;
  border-radius: 24px;
  background: rgba(78, 71, 255, 0.1);
  padding: 50px 80px;
  height: 250px;
}

.info {
  display: flex;
  justify-content: center;
  gap: 150px;
  line-height: 5px;
}

.info p {
  font-size: 20px;
}

.card-sec{
  display: flex;
  justify-content: space-evenly;
  gap: 20px;
}

.card {
  border: 1px solid rgb(242, 237, 237);
  border-radius: 14px;
  background: rgba(255, 255, 255, 0.5);
  padding: 20px;
  width: 350px;
  height: 200px;
}

.avatar {
  border-radius: 45px;
}

.avater-div {
  display: flex;
  gap: 20px;
  align-items: center;
}

.avater-description{
  line-height: 5px;
}

.main-4{
  display: flex;
  align-items: center;
  gap: 200px;
  margin-top: 100px;
}

form{
  display: flex;
  flex-direction: column;
  gap: 20px;
}

input, textarea {
  padding: 20px;
  font-size: 20px;
  border-radius: 8px;
  background: rgb(255, 255, 255);
  border: none;
  
}

.border{
  border: 1px solid rgb(214, 221, 237);
}

